--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
   "devDependencies": {
     "browserify": "^13.1.1",
     "eslint": "^3.9.0",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.4.1",
     "uglify-js": "^2.7.4"
   }
 }
