--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/cgatno/wijmo5_periodic_sunburst#readme",
   "devDependencies": {
+    "babel-eslint": "^7.1.0",
     "browserify": "^13.1.1",
     "eslint": "^3.9.0",
     "eslint-config-airbnb": "^12.0.0",
