--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-eslint": "^7.1.0",
     "babili": "0.0.8",
     "browserify": "^13.1.1",
+    "clean-css": "^3.4.20",
     "eslint": "^3.9.0",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^1.16.0",
