Remove MIT license - this is all property of Wijmo

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ node_modules/
 # Purchase Wijmo 5: http://wijmo.com/purchase/
 # Learn about Wijmo 5 trial CDN: http://wijmo.com/5/docs/static/references.html
 vendor/
+
+wijmo5_periodic_sunburst.zip
