--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cgatno/wijmo5_periodic_sunburst.git"
+    "url": "https://github.com/cgatno/wijmo5_periodic_sunburst.git"
   },
   "keywords": [
     "chemistry",
