--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,13 @@
 // Use this file as a starting point for your project's .eslintrc.
 // Copy this file, and add rule overrides as needed.
 {
-  "extends": "airbnb",
-  "env": {
-    "browser": true
-  }
+    "extends": "airbnb",
+    "env": {
+        "browser": true
+    },
+    "rules": {
+        "import/no-extraneous-dependencies": ["error", {
+            "devDependencies": true
+        }]
+    }
 }
