--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "browserify": "^13.1.1",
     "clean-css": "^3.4.20",
     "eslint": "^3.9.0",
-    "eslint-config-airbnb": "^12.0.0"
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.4.1"
   }
 }
