--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,8 @@
         "import/no-extraneous-dependencies": ["error", {
             "devDependencies": true
         }]
+    },
+    "globals": {
+      "wijmo": false
     }
 }
