Update author information with more of my info
If you think you can put up with me, I'd love to talk to you! (It gets lonely talking to yourself in commit messages all the time.)

--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "periodic",
     "table"
   ],
-  "author": "Christian Gaetano",
+  "author": {
+    "name": "Christian Gaetano",
+    "email": "christian.gaetano@grapecity.com",
+    "url": "https://christiangaetano.com"
+  },
   "bugs": {
     "url": "https://github.com/cgatno/wijmo5_periodic_sunburst/issues"
   },
