Add MIT license back
I thought about this, and the source code here is covered under the MIT license. The Wijmo source code is NOT. Again, I repeat, the Wijmo libraries are NOT covered under the MIT license. They are privately owned and copyrighted by GrapeCity, Inc.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "email": "christian.gaetano@grapecity.com",
     "url": "https://christiangaetano.com"
   },
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/cgatno/wijmo5_periodic_sunburst/issues"
   },
