Update package.json with 'build' script pointing to Gulp

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
-    "start": "ws"
+    "start": "ws",
+    "build": "gulp"
   },
   "repository": {
     "type": "git",
